--- a/bower.json
+++ b/bower.json
@@ -28,7 +28,7 @@
     "angular-ui-router": "*",
     "angularjs-toaster": "*",
     "bootstrap": "*",
-    "font-awesome": "*",
+    "font-awesome": "4.4.*",
     "jquery": "1.*",
     "lodash": "*",
     "moment": "*",
@@ -39,6 +39,7 @@
   },
   "resolutions": {
     "angular": "1.3.*",
-    "jquery": "1.*"
+    "jquery": "1.*",
+    "font-awesome": "4.4.*"
   }
 }
