Corrected bugs on docker command detection Replaced node-webkit-builder (deprecated) with nw-builder

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "gulp-uglify": "*",
     "gulp-util": "*",
     "gulp-watch": "*",
-    "node-webkit-builder": "*",
+    "nw-builder": "*",
     "merge2": "*",
     "vinyl-paths": "*"
   },
