--- a/projects.sample.json
+++ b/projects.sample.json
@@ -5,7 +5,7 @@
 		"ports": {
 			"80/tcp": "${hostPort}"
 		},
-		"volumes": {
+		"mounts": {
 			"/usr/share/nginx/html:ro": "${repositoryDirectory}/${distDirName}"
 		},
 		"variables": {
@@ -41,7 +41,7 @@
 		"ports": {
 			"8000/tcp": "8081"
 		},
-		"volumes": {
+		"mounts": {
 			"/home/project:ro": "${repositoryDirectory}"
 		},
 		"links": {
