--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "Dugout",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "author": "MOBAPI Team <team@mobapi.com>",
   "homepage": "http://www.mobapi.com/",
   "main": "index.html",
   "dependencies": {
-    "dockerode": "*",
-    "ps-node": "*"
+    "dockerode": "*"
   },
   "devDependencies": {
     "coffee-script": "*",
