Updated contact information

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Dugout",
   "version": "1.0.3",
   "description": "",
-  "author": "MOBAPI Team <team@mobapi.com>",
+  "author": "Mobapi <contact@mobapi.com>",
   "homepage": "http://www.mobapi.com/",
   "main": "index.html",
   "dependencies": {
