Refactored some code Added recent open files handling Configuration variables are now saved to the project file

--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "Dugout",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "",
   "author": "Mobapi <contact@mobapi.com>",
   "homepage": "http://www.mobapi.com/",
   "main": "index.html",
   "dependencies": {
-    "dockerode": "*"
+    "dockerode": "*",
+    "js-beautify": "*"
   },
   "devDependencies": {
     "coffee-script": "*",
