Improved logs tab display Added stderr to logs

--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,7 @@
     "angular-sanitize": "*",
     "angular-scroll-glue": "*",
     "angular-ui-router": "*",
+    "angular-ui-switch": "*",
     "angularjs-toaster": "*",
     "async": "*",
     "bootstrap": "*",
