Disabled gettext debug Added linux debug script in package.json

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "vinyl-paths": "*"
   },
   "scripts": {
-    "debug": ".nwcache/0.12.3/osx64/nwjs.app/Contents/MacOS/nwjs www",
+    "debug-osx": ".nwcache/0.12.3/osx64/nwjs.app/Contents/MacOS/nwjs www",
+    "debug-linux": ".nwcache/0.12.3/linux64/nw www",
     "build": "gulp clean && gulp && gulp build",
     "build_mac_icon": "./buildMacIconset.sh src/images/logo.png",
     "test": "echo \"Error: no test specified\" && exit 1"
