Added "remember credentials" functionality to image pull process Added "stored credentials" list and remove from global configuration Removed email address from credentials Added jquery.mousewheel as a dependency to prevent download from the web

--- a/bower.json
+++ b/bower.json
@@ -30,6 +30,7 @@
     "bootstrap": "*",
     "font-awesome": "4.5.*",
     "jquery": "1.*",
+    "jquery-mousewheel": "*",
     "lodash": "*",
     "moment": "*",
     "ng-scrollbars": "*",
