--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {"gulp-expect-file": "*",
   "name": "Dugout",
-  "version": "2.1.3-pre",
+  "version": "2.1.3",
   "description": "",
   "author": "Mobapi <contact@mobapi.com>",
   "homepage": "http://www.mobapi.com/",
