Now saving variables values in user local storage Moved to NodeWebkit v0.25 Fixed dependencies versions in package.json

--- a/bower.json
+++ b/bower.json
@@ -14,33 +14,33 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "1.5.*",
-    "angular-bootstrap": "*",
-    "angular-dynamic-locale": "*",
+    "angular": "~1.6.6",
+    "angular-bootstrap": "^2.5.0",
+    "angular-dynamic-locale": "~0.1.32",
     "angular-hotkeys": "chieffancypants/angular-hotkeys",
-    "angular-gettext": "*",
-    "angular-i18n": "*",
-    "angular-local-storage": "*",
-    "angular-moment": "*",
-    "angular-sanitize": "*",
-    "angular-ui-router": "*",
-    "angular-ui-switch": "*",
-    "angularjs-toaster": "*",
-    "async": "*",
-    "bootstrap": "*",
-    "font-awesome": "4.5.*",
-    "jquery": "1.*",
-    "jquery-mousewheel": "*",
-    "lodash": "*",
-    "moment": "*",
-    "ng-scrollbars": "*",
-    "ng-prettyjson": "*",
-    "sprintf": "*",
-    "startbootstrap-sb-admin-2": "*"
+    "angular-gettext": "^2.3.10",
+    "angular-i18n": "~1.6.6",
+    "angular-local-storage": "^0.7.1",
+    "angular-moment": "^1.0.1",
+    "angular-sanitize": "~1.6.6",
+    "angular-ui-router": "^1.0.6",
+    "angular-ui-switch": "~0.1.1",
+    "angularjs-toaster": "^2.2.0",
+    "async": "^2.5.0",
+    "bootstrap": "^3.3.7",
+    "font-awesome": "^4.7.0",
+    "jquery": "^1.12.4",
+    "jquery-mousewheel": "^3.1.13",
+    "lodash": "^4.17.4",
+    "moment": "^2.18.1",
+    "ng-scrollbars": "~0.0.11",
+    "ng-prettyjson": "^0.2.1",
+    "sprintf": "^1.1.1",
+    "startbootstrap-sb-admin-2": "BlackrockDigital/startbootstrap-sb-admin-2#^3.3.7"
   },
   "resolutions": {
-    "angular": "1.5.*",
-    "jquery": "1.*",
-    "font-awesome": "4.5.*"
+    "angular": "~1.6.6",
+    "font-awesome": "^4.7.0",
+    "jquery": "^1.12.4"
   }
 }
