--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "Dugout",
-  "version": "2.1.5",
+  "version": "2.2.0",
   "description": "",
   "author": "Mobapi <contact@mobapi.com>",
   "homepage": "http://www.mobapi.com/",
   "main": "index.html",
   "dependencies": {
-    "chokidar": "*",
-    "dockerode": "*",
-    "js-beautify": "*"
+    "chokidar": "^1.7.0",
+    "dockerode": "^2.5.1"
   },
   "devDependencies": {
     "coffee-script": "*",
@@ -25,13 +24,13 @@
     "gulp-uglify": "*",
     "gulp-util": "*",
     "gulp-watch": "*",
-    "nw-builder": "*",
+    "nw-builder": "^3.4.1",
     "merge2": "*",
     "vinyl-paths": "*"
   },
   "scripts": {
-    "debug-osx": ".nwcache/0.16.0/osx64/nwjs.app/Contents/MacOS/nwjs www",
-    "debug-linux": ".nwcache/0.16.0/linux64/nw www",
+    "debug-osx": ".nwcache/0.25.0-sdk/osx64/nwjs.app/Contents/MacOS/nwjs www",
+    "debug-linux": ".nwcache/0.25.0-sdk/linux64/nw www",
     "build": "gulp clean && gulp && gulp build",
     "build_mac_icon": "./buildMacIconset.sh src/images/logo.png",
     "test": "echo \"Error: no test specified\" && exit 1"
