--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,7 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.6.6",
+    "angular": "^1.6.6",
     "angular-bootstrap": "^2.5.0",
     "angular-dynamic-locale": "~0.1.32",
     "angular-hotkeys": "chieffancypants/angular-hotkeys",
