--- a/package.json
+++ b/package.json
@@ -1,32 +1,32 @@
 {
   "name": "Dugout",
-  "version": "2.2.0",
+  "version": "2.2.1",
   "description": "",
   "author": "Mobapi <contact@mobapi.com>",
   "homepage": "http://www.mobapi.com/",
   "main": "index.html",
   "dependencies": {
-    "chokidar": "^1.7.0",
-    "dockerode": "^2.5.1"
+    "chokidar": "^2.0.3",
+    "dockerode": "^2.5.5"
   },
   "devDependencies": {
-    "coffee-script": "*",
-    "del": "*",
-    "gulp": "*",
-    "gulp-angular-gettext": "*",
-    "gulp-coffee": "*",
-    "gulp-concat": "*",
-    "gulp-expect-file": "*",
-    "gulp-less": "*",
-    "gulp-minify-css": "*",
-    "gulp-minify-html": "*",
-    "gulp-ng-html2js": "*",
-    "gulp-uglify": "*",
-    "gulp-util": "*",
-    "gulp-watch": "*",
-    "nw-builder": "^3.4.1",
-    "merge2": "*",
-    "vinyl-paths": "*"
+    "coffee-script": "^1.12.7",
+    "del": "^3.0.0",
+    "fancy-log": "^1.3.2",
+    "gulp": "^3.9.1",
+    "gulp-angular-gettext": "^2.2.0",
+    "gulp-coffee": "^3.0.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-expect-file": "^0.0.7",
+    "gulp-less": "^3.5.0",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-minify-html": "^1.0.6",
+    "gulp-ng-html2js": "^0.2.2",
+    "gulp-uglify": "^3.0.0",
+    "gulp-watch": "^5.0.0",
+    "merge2": "^1.2.2",
+    "nw-builder": "^3.5.1",
+    "vinyl-paths": "^2.1.0"
   },
   "scripts": {
     "debug-osx": ".nwcache/0.25.0-sdk/osx64/nwjs.app/Contents/MacOS/nwjs www",
