--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dockerode": "^2.5.5"
   },
   "devDependencies": {
+    "bower": "^1.8.4",
     "coffee-script": "^1.12.7",
     "del": "^3.0.0",
     "fancy-log": "^1.3.2",
@@ -25,10 +26,11 @@
     "gulp-uglify": "^3.0.0",
     "gulp-watch": "^5.0.0",
     "merge2": "^1.2.2",
-    "nw-builder": "^3.5.1",
+    "nw-builder": "^3.5.4",
     "vinyl-paths": "^2.1.0"
   },
   "scripts": {
+    "bower": "bower up",
     "debug-osx": ".nwcache/0.31.0-sdk/osx64/nwjs.app/Contents/MacOS/nwjs www",
     "debug-linux": ".nwcache/0.31.0-sdk/linux64/nw www",
     "build": "gulp clean && gulp && gulp build",
